--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 Some note I write.
 
-There is some note I do when I am learning. If something wrong or
-you want to communicate with me, please contact me, I am glad to
-communicate you. Thank you.
+There is some note I do when I am learning.
 
 --
 Shubham Goyal
